# Robotics-Project

./: README.md
CAL Testing/project_2/: project_2.xpr
HelloWorld/Debug/: HelloWorld.elf  HelloWorld.elf.size
Meanshift/INTmeanShift/: .project
Meanshift/c++/: Makefile  colourModel.cpp  colourModel.h  initTracker  initTracker.cpp  meanshift  meanshift.cpp  readme-c++.txt  seqcons  seqcons.cpp  seqdes  seqdes.cpp
Meanshift/openCV/meanShift_OpenCV/: CMakeLists.txt  README
Meanshift/openCV/meanShift_OpenCV/include/: global.h
Meanshift/openCV/meanShift_OpenCV/src/: initTrack.cpp  initTrack.cpp~  main.cpp  main.cpp~
Mita_Playground/: 1.txt  3.txt  Adder32.v  Adder32.vhd  Adder32_TestBench.v  Adder32_TestBench2.vhd  ISE_ADDER_TB2.vhd  PETS_176x144_copy.yuv  Untitled.m  camera.vhd  convert.vhd  data.coe  file_read.vhd  imadder.vhd  image.hex  imageProc2.xpr  imagetestbench_clk.vhd  img.txt  img_testbench2_08bits.vhd  imgadder_test.vhd  input1.txt  input2.txt  inputHex.txt  line_buffer.vhd  monitor.vhd  readWrite.vhd  tb1.vhd  tb_file_read.vhd  tb_readWrite.vhd  test2.m  test3.m  test_line_buffer_8b.vhd  test_mean3x3.vhd  test_mean3x3Operation.vhd  test_slidingWindow.vhd  videoProcessingTb.xpr
Mita_Playground/Adder32/: Adder32.xpr
Mita_Playground/AdderVhdl/: AdderVhdl.xpr
Mita_Playground/AdderVhdl2/: AdderVhdl2.xpr  testbench_behav.wcfg
Mita_Playground/Camera/: Camera.xpr
Mita_Playground/ISE Project/: Actor_1.bld  Actor_1.cmd_log  Actor_1.ngc  Actor_1.ngd  Actor_1.ngr  Actor_1.prj  Actor_1.spl  Actor_1.stx  Actor_1.sym  Actor_1.syr  Actor_1.tfi  Actor_1.xst  (+33 more)
(+1098 files in other folders)
